--- a/gerenciador.html
+++ b/gerenciador.html
@@ -12,9 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@200&display=swap" rel="stylesheet">
-    <title>Perfil</title>
+    <title>Gerenciador</title>
 </head>
-
 <body>
     <header>
         <a href="index.html">
@@ -99,5 +98,4 @@
         </div>
     </footer>
 </body>
-
 </html>
