--- a/cadastro_pessoa.html
+++ b/cadastro_pessoa.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@200&display=swap" rel="stylesheet">
-    <title>Cadastro Pessoa</title>
+    <title>Cadastro Pessoal</title>
 </head>
 <body>
     <header>
