--- a/cadastro_estabelecimento.html
+++ b/cadastro_estabelecimento.html
@@ -13,6 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@200&display=swap" rel="stylesheet">
     <title>Cadastro do estabelecimento</title>
+    <style>
+        footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -29,35 +36,41 @@
         </a>
     </header>
     <br><br><br><br><br><br><br>
-
     <div id="container-cadastro">
         <br><br><br>
         <h1 id="titulo-principal">Informações empresariais</h1>
         <br><br><br><br><br>
         <form action="" id="form-cadastro">
             <div id="container-linhas-lacunas">
-                <div id="container-lacuna"><input type="text" name="nome-e" id="lacuna" placeholder="Nome Empresarial:"></div>
-                <div id="container-lacuna"><input type="text" name="nome-f" id="lacuna" placeholder="Nome Fantasia:"></div>
-                <div id="container-lacuna"><input type="text" name="complemento-e" id="lacuna" placeholder="Complemento:"></div>
-                <div id="container-lacuna"><input type="text" name="cep-e" id="lacuna" placeholder="CEP:"></div>
+                <div id="container-lacuna"><input type="text" name="nome-e" id="lacuna" placeholder="Nome Empresarial:" minlength="1" maxlength="45"></div>
+                <div id="container-lacuna"><input type="text" name="nome-f" id="lacuna" placeholder="Nome Fantasia:" minlength="1" maxlength="45"></div>
+                <div id="container-lacuna"><input type="text" name="CNPJ" id="lacuna" placeholder="CNPJ:" minlength="14" maxlength="14"></div>
+                <div id="container-lacuna"><input type="text" name="cep-e" id="lacuna" placeholder="CEP:" minlength="8" maxlength="8"></div>
             </div>
             <br>
             <br>
             <br>
             <div id="container-linhas-lacunas">
-                <div id="container-lacuna"><input type="text" name="numero-e" id="lacuna" placeholder="Número:"></div>
-                <div id="container-lacuna"><input type="text" name="tamanho" id="lacuna" placeholder="Tamanho Estabelecimento:"></div>
-                <div id="container-lacuna"><input type="text" name="bairro-e" id="lacuna" placeholder="Bairro:"></div>
-                <div id="container-lacuna"><input type="text" name="municipio-e" id="lacuna" placeholder="Municipio:"></div>
+                <div id="container-lacuna"><input type="number" name="numero-e" id="lacuna" placeholder="Número:" minlength="1" maxlength="10"></div>
+                <div id="container-lacuna"><input type="text" name="tamanho" id="lacuna" placeholder="Tamanho Estabelecimento:" minlength="8" maxlength="8"></div>
+                <div id="container-lacuna"><input type="text" name="bairro-e" id="lacuna" placeholder="Bairro:" minlength="1" maxlength="60"></div>
+                <div id="container-lacuna"><input type="text" name="municipio-e" id="lacuna" placeholder="Municipio:" minlength="1" maxlength="35"></div>
             </div>
             <br>
             <br>
             <br>
             <div id="container-linhas-lacunas">
-                <div id="container-lacuna"><input type="text" name="uf-e" id="lacuna" placeholder="UF:"></div>
-                <div id="container-lacuna"><input type="text" name="logradouro" id="lacuna" placeholder="Logradouro:"></div>
-                <div id="container-lacuna"><input type="text" name="email-e" id="lacuna" placeholder="E-mail:"></div>
-                <div id="container-lacuna"><input type="text" name="telefone-e" id="lacuna" placeholder="Telefone:"></div>
+                <div id="container-lacuna"><input type="text" name="uf-e" id="lacuna" placeholder="UF:" minlength="2" maxlength="2"></div>
+                <div id="container-lacuna"><input type="text" name="logradouro" id="lacuna" placeholder="Logradouro:" minlength="1" maxlength="60"></div>
+                <div id="container-lacuna"><input type="text" name="email-e" id="lacuna" placeholder="E-mail:" minlength="8" maxlength="35"></div>
+                <div id="container-lacuna"><input type="text" name="telefone-e" id="lacuna" placeholder="Telefone:" minlength="11" maxlength="11"></div>
+            </div>
+            <br><br><br>
+            <div id="container-linhas-lacunas">
+                <div id="container-lacuna"><input type="text" name="complemento-e" id="lacuna" placeholder="Complemento:" minlength="0" maxlength="45"></div>
+                <div id="container-lacuna"></div>
+                <div id="container-lacuna"></div>
+                <div id="container-lacuna"></div>
             </div>
             <br><br><br><br><br><br><br><br><br>
             <div id="container-button-continuar">
