--- a/cadastro_pessoa.html
+++ b/cadastro_pessoa.html
@@ -36,26 +36,26 @@
         <br><br><br><br><br>
         <form action="" id="form-cadastro">
             <div id="container-linhas-lacunas">
-                <div id="container-lacuna"><input type="text" name="nome" id="lacuna" placeholder="Nome:"></div>
-                <div id="container-lacuna"><input type="text" name="cpf" id="lacuna" placeholder="CPF:"></div>
-                <div id="container-lacuna"><input type="text" name="bairro" id="lacuna" placeholder="Bairro:"></div>
-                <div id="container-lacuna"><input type="text" name="cep" id="lacuna" placeholder="CEP:"></div>
+                <div id="container-lacuna"><input type="text" name="nome" id="lacuna" placeholder="Nome:" minlength="1" maxlength="50"></div>
+                <div id="container-lacuna"><input type="text" name="cpf" id="lacuna" placeholder="CPF:" minlength="11" maxlength="11"></div>
+                <div id="container-lacuna"><input type="text" name="bairro" id="lacuna" placeholder="Bairro:" minlength="1" maxlength="50"></div>
+                <div id="container-lacuna"><input type="text" name="cep" id="lacuna" placeholder="CEP:" minlength="8" maxlength="8"></div>
             </div>
             <br>
             <br>
             <br>
             <div id="container-linhas-lacunas">
-                <div id="container-lacuna"><input type="text" name="numero" id="lacuna" placeholder="Número:"></div>
-                <div id="container-lacuna"><input type="text" name="complemento" id="lacuna" placeholder="Complemento:"></div>
-                <div id="container-lacuna"><input type="text" name="uf" id="lacuna" placeholder="UF:"></div>
-                <div id="container-lacuna"><input type="text" name="municipio" id="lacuna" placeholder="Municipio:"></div>
+                <div id="container-lacuna"><input type="text" name="numero" id="lacuna" placeholder="Número:" minlength="1" maxlength="10"></div>
+                <div id="container-lacuna"><input type="text" name="complemento" id="lacuna" placeholder="Complemento:" minlength="0" maxlength="50"></div>
+                <div id="container-lacuna"><input type="text" name="uf" id="lacuna" placeholder="UF:" minlength="2" maxlength="2"></div>
+                <div id="container-lacuna"><input type="text" name="municipio" id="lacuna" placeholder="Municipio:" minlength="1" maxlength="45"></div>
             </div>
             <br>
             <br>
             <br>
             <div id="container-linhas-lacunas">
-                <div id="container-lacuna"><input type="text" name="email" id="lacuna" placeholder="E-mail:"></div>
-                <div id="container-lacuna"><input type="text" name="telefone" id="lacuna" placeholder="Telefone:"></div>
+                <div id="container-lacuna"><input type="text" name="email" id="lacuna" placeholder="E-mail:" minlength="8" maxlength="35"></div>
+                <div id="container-lacuna"><input type="text" name="telefone" id="lacuna" placeholder="Telefone:" minlength="11" maxlength="11"></div>
                 <div id="container-lacuna"></div>
                 <div id="container-lacuna"></div>
             </div>
