--- a/cadastro_estabelecimento.html
+++ b/cadastro_estabelecimento.html
@@ -68,14 +68,13 @@
             <br><br><br>
             <div id="container-linhas-lacunas">
                 <div id="container-lacuna"><input type="text" name="complemento-e" id="lacuna" placeholder="Complemento:" minlength="0" maxlength="45"></div>
-                <div id="container-lacuna"></div>
+                <div id="container-lacuna"><input type="password" name="senha" id="lacuna" placeholder="Senha:" minlength="8" maxlength="16"></div>
                 <div id="container-lacuna"></div>
                 <div id="container-lacuna"></div>
             </div>
             <br><br><br><br><br><br><br><br><br>
-            <div id="container-button-continuar">
-                <a href="">
-                <input type="button" value="Cadastrar" id="bto-continuar"> </a><!-- colocar submit no lugar de button -->
+            <div id="container-button-cadastrar">
+                <input type="button" value="Cadastrar" id="bto-cadastrar"><!-- colocar submit no lugar de button -->
             </div>
         </form>
     </div>
