--- a/cadastro_pessoa.html
+++ b/cadastro_pessoa.html
@@ -60,9 +60,9 @@
                 <div id="container-lacuna"></div>
             </div>
             <br><br><br><br><br><br><br><br><br>
-            <div id="container-button-continuar">
+            <div id="container-button-cadastrar">
                 <a href="cadastro-empresarial.html">
-                <input type="button" value="Continuar" id="bto-continuar"> </a><!-- colocar submit no lugar de button -->
+                <input type="button" value="Continuar" id="bto-cadastrar"> </a><!-- colocar submit no lugar de button -->
             </div>
         </form>
     </div>
