--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <br>
                 <br>
                 <button class="comprar">
-                    <a href="" class="link-compra" style="text-decoration: none;">
+                    <a href="cadastro_estabelecimento.html" class="link-compra" style="text-decoration: none;">
                         <p class="bto-comprar">COMPRE AGORA</p>
                     </a>
                 </button>
@@ -107,7 +107,7 @@
                 <br>
                 <br>
                 <button class="comprar">
-                    <a href="" class="link-compra" style="text-decoration: none;">
+                    <a href="cadastro_estabelecimento.html" class="link-compra" style="text-decoration: none;">
                         <p class="bto-comprar">COMPRE AGORA</p>
                     </a>
                 </button>
@@ -149,7 +149,7 @@
                 <br>
                 <br>
                 <button class="comprar">
-                    <a href="" class="link-compra" style="text-decoration: none;">
+                    <a href="cadastro_estabelecimento.html" class="link-compra" style="text-decoration: none;">
                         <p class="bto-comprar">COMPRE AGORA</p>
                     </a>
                 </button>
