--- a/infos.html
+++ b/infos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@200&display=swap" rel="stylesheet">
     <title>Infos Adicionais</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
@@ -33,63 +35,44 @@
     <br>
     <div id="box-texto-mais-vendidos">
         <h1 class="titulo-grande">
-            Produto mais vendidos
+            Produtos cadastrados
+        </h1>
+    </div>
+    <br><br><br>
+    <main>
+        <div id="lista">
+            <div class="item">
+                <div class="img">
+                    <img src="" alt="">
+                </div>
+                <div class="informacoes">
+                    <p>Chocolate milka</p><br>
+                    <p>qtd. 30</p>
+                </div>
+            </div>
+            <hr>
+            <div class="item">
+                <div class="img">
+                    <img src="" alt="">
+                </div>
+                <div class="informacoes">
+                    <p>Chocolate milka</p><br>
+                    <p>qtd. 30</p>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </main>
+    <br><br><br>
+    <div id="box-lugares-mais-vendidos">
+        <h1 class="titulo-grande">
+            Total de vendas
         </h1>
     </div>
     <br>
     <br>
-    <br>
-        <p class="texto-mais-vendidos">159 -Arroz (Camil)</p>
-        <br>
-        <br>
-        <p class="texto-mais-vendidos">159 -Arroz (Camil)</p>
-        <br>
-        <br>
-        <p class="texto-mais-vendidos">159 -Arroz (Camil)</p>
-    <br>
-    <br>
-    <br>
-    <div id="box-lugares-mais-vendidos">
-    <h1 class="titulo-grande">
-        Lugares com mais vendas
-    </h1>
-    </div>
-    <br>
-    <br>
-    <div id="container-informacoes">
-        <ins>
-            <h2 id="texto-informacoes">Estabelecimento:</h2>
-        </ins>
-        <ins>
-            <h2 id="texto-informacoes">Total de vendas:</h2>
-        </ins>
-    </div>
-    <br>
-    <br>
-    <div id="container-informacoes">
-        <div id="box-lugares-vendas-esquerda">
-            <h2 id="nome-loja">Enxuto</h2>
-            <br>
-            <h3 id="endereco">Av. da saudade N°:347</h3>
-        </div>
-        <div id="box-lugares-vendas-direita">
-            <h2 id="total-vendas">1560</h2>
-        </div>
-    </div>
-    <br>
-    <hr id="linha-cinza">
-    <br>
-    <br>
-    <br>
-    <div id="container-informacoes">
-        <div id="box-lugares-vendas-esquerda">
-            <h2 id="nome-loja">Loja 3:</h2>
-            <br>
-            <h3 id="endereco">Av. da saudade N°:347</h3>
-        </div>
-        <div id="box-lugares-vendas-direita">
-            <h2 id="total-vendas">1560</h2>
-        </div>
+    <div id="container-informacoes" style="display: flex; justify-content: center; align-items: center;">
+        <h2 id="texto-informacoes">2000</h2>
     </div>
     <br>
     <br>
@@ -113,4 +96,5 @@
         </div>
     </footer>
 </body>
+
 </html>
