--- a/cadastro_estabelecimento.html
+++ b/cadastro_estabelecimento.html
@@ -38,7 +38,7 @@
     <br><br><br><br><br><br><br>
     <div id="container-cadastro">
         <br><br><br>
-        <h1 id="titulo-principal">Informações empresariais</h1>
+        <h1 id="titulo-principal">Informações do estabelecimento</h1>
         <br><br><br><br><br>
         <form action="" id="form-cadastro">
             <div id="container-linhas-lacunas">
@@ -69,7 +69,7 @@
             <div id="container-linhas-lacunas">
                 <div id="container-lacuna"><input type="text" name="complemento-e" id="lacuna" placeholder="Complemento:" minlength="0" maxlength="45"></div>
                 <div id="container-lacuna"><input type="password" name="senha" id="lacuna" placeholder="Senha:" minlength="8" maxlength="16"></div>
-                <div id="container-lacuna"></div>
+                <div id="container-lacuna"><input type="number" name="cod_estabel" id="lacuna" placeholder="Cod. do Estabel:" minlength="1" maxlength="6"></div>
                 <div id="container-lacuna"></div>
             </div>
             <br><br><br><br><br><br><br><br><br>
