--- a/cadastro_pessoa.html
+++ b/cadastro_pessoa.html
@@ -28,10 +28,8 @@
             </div>
         </a>
     </header>
-    <br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br>
     <div id="container-cadastro">
-        <h1 id="titulo-principal">Cadastro de comércio</h1>
-        <br><br><br><br>
         <h2 id="titulo-adicional">Informações pessoais</h2>
         <br><br><br><br><br>
         <form action="" id="form-cadastro">
@@ -56,17 +54,17 @@
             <div id="container-linhas-lacunas">
                 <div id="container-lacuna"><input type="text" name="email" id="lacuna" placeholder="E-mail:" minlength="8" maxlength="35"></div>
                 <div id="container-lacuna"><input type="text" name="telefone" id="lacuna" placeholder="Telefone:" minlength="11" maxlength="11"></div>
-                <div id="container-lacuna"></div>
+                <div id="container-lacuna"><input type="password" name="senha" id="lacuna" placeholder="Senha:" minlength="8" maxlength="16"></div>
                 <div id="container-lacuna"></div>
             </div>
             <br><br><br><br><br><br><br><br><br>
             <div id="container-button-cadastrar">
                 <a href="cadastro-empresarial.html">
-                <input type="button" value="Continuar" id="bto-cadastrar"> </a><!-- colocar submit no lugar de button -->
+                <input type="button" value="Cadastrar" id="bto-cadastrar"> </a><!-- colocar submit no lugar de button -->
             </div>
         </form>
     </div>
-    <br><br><br>
+    <br>
     <footer>
         <img src="img/icart_logo.png" alt="" id="img-logo-icart">
         <div id="espaco-footer"></div>
