--- a/cadastro_estabelecimento.html
+++ b/cadastro_estabelecimento.html
@@ -51,7 +51,7 @@
             <br>
             <br>
             <div id="container-linhas-lacunas">
-                <div id="container-lacuna"><input type="number" name="numero-e" id="lacuna" placeholder="Número:" minlength="1" maxlength="10"></div>
+                <div id="container-lacuna"><input type="number" name="numero-e" id="lacuna" placeholder="Número:" min="1" maxlength="10"></div>
                 <div id="container-lacuna"><input type="text" name="tamanho" id="lacuna" placeholder="Tamanho Estabelecimento:" minlength="8" maxlength="8"></div>
                 <div id="container-lacuna"><input type="text" name="bairro-e" id="lacuna" placeholder="Bairro:" minlength="1" maxlength="60"></div>
                 <div id="container-lacuna"><input type="text" name="municipio-e" id="lacuna" placeholder="Municipio:" minlength="1" maxlength="35"></div>
