--- a/perfil.html
+++ b/perfil.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="dados">
-            <p>Nome da empresa:</p>
+            <p>Nome do estabelecimento:</p>
             <p>lore</p>
         </div>
         <div class="dados">
