--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <br>
     <div id="cont-compra">
         <div class="cont-planos" style="padding-left: 200px;">
-            <div class="plano">
+            <div class="plano" style="padding-top: 90px;">
                 <p class="tamanho-estabelecimento">
                     Pequenos comércios
                 </p>
@@ -72,23 +72,10 @@
                 <br>
                 <br>
                 <br>
-                <div class="cont-desc">
-                    <div class="cont-img-check">
-                        <img src="img/check.png" id="img-check" alt="descricao">
-                    </div>
-                    <div class="descricao">
-                        <p class="texto-descricao">
-                            xxxxxxxxxxxxxxx
-                        </p>
-                        <p class="texto-descricao">
-                            xxxxxxxxxxxxxxx
-                        </p>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="cont-planos">
-            <div class="plano">
+            <div class="plano" style="padding-top: 90px;">
                 <p class="tamanho-estabelecimento">
                     Grandes comércios
                 </p>
@@ -114,23 +101,10 @@
                 <br>
                 <br>
                 <br>
-                <div class="cont-desc">
-                    <div class="cont-img-check">
-                        <img src="img/check.png" id="img-check" alt="descricao">
-                    </div>
-                    <div class="descricao">
-                        <p class="texto-descricao">
-                            xxxxxxxxxxxxxxx
-                        </p>
-                        <p class="texto-descricao">
-                            xxxxxxxxxxxxxxx
-                        </p>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="cont-planos" style="padding-right: 200px;">
-            <div class="plano">
+            <div class="plano" style="padding-top: 90px;">
                 <p class="tamanho-estabelecimento">
                     Franquias
                 </p>
@@ -156,19 +130,6 @@
                 <br>
                 <br>
                 <br>
-                <div class="cont-desc">
-                    <div class="cont-img-check">
-                        <img src="img/check.png" id="img-check" alt="descricao">
-                    </div>
-                    <div class="descricao">
-                        <p class="texto-descricao">
-                            xxxxxxxxxxxxxxx
-                        </p>
-                        <p class="texto-descricao">
-                            xxxxxxxxxxxxxxx
-                        </p>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
