--- a/cadastro_estabelecimento.html
+++ b/cadastro_estabelecimento.html
@@ -45,7 +45,7 @@
                 <div id="container-lacuna"><input type="text" name="nome-e" id="lacuna" placeholder="Nome Empresarial:" minlength="1" maxlength="45"></div>
                 <div id="container-lacuna"><input type="text" name="nome-f" id="lacuna" placeholder="Nome Fantasia:" minlength="1" maxlength="45"></div>
                 <div id="container-lacuna"><input type="text" name="CNPJ" id="lacuna" placeholder="CNPJ:" minlength="14" maxlength="14"></div>
-                <div id="container-lacuna"><input type="text" name="cep-e" id="lacuna" placeholder="CEP:" minlength="8" maxlength="8"></div>
+                <div id="container-lacuna"><input type="text" name="cep-e" id="cep" placeholder="CEP:" minlength="8" maxlength="8"></div>
             </div>
             <br>
             <br>
@@ -53,15 +53,15 @@
             <div id="container-linhas-lacunas">
                 <div id="container-lacuna"><input type="number" name="numero-e" id="lacuna" placeholder="Número:" min="1" maxlength="10"></div>
                 <div id="container-lacuna"><input type="text" name="tamanho" id="lacuna" placeholder="Tamanho Estabelecimento:" minlength="8" maxlength="8"></div>
-                <div id="container-lacuna"><input type="text" name="bairro-e" id="lacuna" placeholder="Bairro:" minlength="1" maxlength="60"></div>
-                <div id="container-lacuna"><input type="text" name="municipio-e" id="lacuna" placeholder="Municipio:" minlength="1" maxlength="35"></div>
+                <div id="container-lacuna"><input type="text" name="bairro-e" id="bairro" placeholder="Bairro:" minlength="1" maxlength="60"></div>
+                <div id="container-lacuna"><input type="text" name="municipio-e" id="localidade" placeholder="Municipio:" minlength="1" maxlength="35"></div>
             </div>
             <br>
             <br>
             <br>
             <div id="container-linhas-lacunas">
-                <div id="container-lacuna"><input type="text" name="uf-e" id="lacuna" placeholder="UF:" minlength="2" maxlength="2"></div>
-                <div id="container-lacuna"><input type="text" name="logradouro" id="lacuna" placeholder="Logradouro:" minlength="1" maxlength="60"></div>
+                <div id="container-lacuna"><input type="text" name="uf-e" id="uf" placeholder="UF:" minlength="2" maxlength="2"></div>
+                <div id="container-lacuna"><input type="text" name="logradouro" id="logradouro" placeholder="Logradouro:" minlength="1" maxlength="60"></div>
                 <div id="container-lacuna"><input type="text" name="email-e" id="lacuna" placeholder="E-mail:" minlength="8" maxlength="35"></div>
                 <div id="container-lacuna"><input type="text" name="telefone-e" id="lacuna" placeholder="Telefone:" minlength="11" maxlength="11"></div>
             </div>
@@ -97,5 +97,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
